--- a/code/modules/goonchat/browserassets/html/browserOutput.html
+++ b/code/modules/goonchat/browserassets/html/browserOutput.html
@@ -9,6 +9,11 @@
 	<script type="text/javascript" src="errorHandler.js"></script>
 	<script type="text/javascript" src="jquery.min.js"></script>
 	<script type="text/javascript" src="json2.min.js"></script>
+	<!-- The following script(s) require IE9 or above -->
+	<!--[if gte IE 9]><!-->
+		<script type="text/javascript" src="unicode_9_annotations.json"></script>
+		<script type="text/javascript" src="twemoji.min.js"></script>
+	<!--<![endif]-->
 </head>
 <body>
 	<div id="loading">
